LinkedIn icon update and few cosmetic changes

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Bhupendra Singh</h1>
-						<p>Senior Software Engineer &nbsp;&bull;&nbsp;</p>
+						<p>Senior Software Engineer</p>
 						<nav>
 							<ul>
+								<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
@@ -35,7 +36,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright">&copy;Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
 					</footer>
 
 			</div>
