--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 						<p>Senior Software Engineer</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.linkedin.com/in/bhupendra-singh-1405285" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<!---<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 								<!---<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
 								<!---<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/bhupendrasingh26" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
